# ai-music-full-pipeline

./: .gitignore  .gitmodules  AGENTS.md  AltArchitecturePlan.md  ArchReview.md  CLAUDE.md  CascadedPlan.md  ClaudeNotes.md  DAWInsertNotes.md  DAWPluginPlan.md  IMPROVEMENTS.md  MAKE_BLUES_TRAIN.md  Makefile  NoteDiscriminator.md  README.md  RepresentationResearch.md  UpgradesToConsider-2025-02-27.md  install.ps1  setup.bash
finetune/: check_instruments.py  convert.py  finetune.py  generate.py  mmt_convert.py  mmt_finetune.py  mmt_generate.py  mmt_requirements.txt  notochord_convert.py  notochord_finetune.py  notochord_generate.py  requirements.txt
plugin/: .gitignore  README.md  daw_insert.py  daw_setup.py  server.py
plugin/AIMusicPlugin/: CMakeLists.txt
plugin/AIMusicPlugin/Source/: PipelineClient.cpp  PipelineClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: audition_gigamidi.py  batch_generate.py  build_discriminator_data.py  compare_discriminator.py  convert_chorales_npz_to_midi.py  fetch_fma_blues.py  fetch_gigamidi_blues.py  fetch_nam_models.py  fetch_slakh.py  generate_best.py  midi_browser.py  package_release.sh  patch_vocab_tempo.py  preview_bass_augmentations.py  run_chorale_pipeline.sh  run_end_to_end.sh  runpod_setup.sh  setup_venv.sh
tests/: test_cascade_eval.py  test_cascade_model.py  test_cascade_pre.py  test_chorale_convert.py  test_chorale_dense.py  test_chorale_preprocess.py  test_instrument_config.py  test_map_name_to_slot.py
training/: build_knn_index.py  eval_cascade.py  generate.py  generate_cascade.py  generate_chorale_dense.py  generate_v2.py  model_cascade.py  model_chorale_dense.py  note_discriminator.py  pre.py  pre_cascade.py  pre_chorale_dense.py  spe_features.py  train.py  train_cascade.py  train_chorale_dense.py  train_discriminator.py
